fix colors in dark mode for new ver

--- a/source/color-scheme.scss
+++ b/source/color-scheme.scss
@@ -29,7 +29,7 @@ html[data-theme="dark"] {
   --ls-block-ref-link-text-color: #73d2f6;
   --ls-search-background-color: var(--ls-primary-background-color);
   --ls-border-color: #3f3f3f;
-  --ls-menu-hover-color: var(--ls-tertiary-background-color);
+  --ls-menu-hover-color: var(--ls-table-tr-even-background-color);
   --ls-primary-text-color: #ccc;
   --ls-secondary-text-color: #aaa;
   --bf-strong-text-color: #dddddd;
