--- a/source/theme-dark.scss
+++ b/source/theme-dark.scss
@@ -24,7 +24,7 @@
   }
 
   .left-sidebar-inner {
-    a {
+    a.item {
       color: var(--ls-primary-text-color);
     }
   }
